--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "formidable": "^1.2.1",
     "katex": "^0.10.2",
     "mobx": "^4.13.0",
-    "mobx-react": "^6.0.0-rc.4",
+    "mobx-react": "^6.1.3",
     "mobx-react-devtools": "^5.0.1",
     "mobx-react-router": "^4.0.7",
     "nodemon": "^1.19.1",
